--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,4 +1,5 @@
 @import url("reset.css");
+@import url("../js/app/wijit/resources/wijit.css");
 
 html, body {
   padding: 0;
@@ -6,11 +7,5 @@ html, body {
 }
 
 #mapDivA, #mapDivB, #mapDivC {
-  height: 200px;
-}
-
-#templatedWidget {
-  background-image: url('img/gray-gradient.jpg');
-  background-repeat: repeat-x;
   height: 200px;
 }
