Add i18n example. Resolves #12

--- a/src/js/app/wijit/templates/TemplatedWidget.html
+++ b/src/js/app/wijit/templates/TemplatedWidget.html
@@ -1,1 +1,1 @@
-<div>This is a templated widget and the value of the message property is: ${message}.</div>
+<div>This is a templated widget and the value of the message property is: ${message}. Sky is ${color}.</div>
